<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    
    
     <include layout="@layout/title_public"/>
     
     
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        
        >

   
            <ImageView
                android:id="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />
      

            <TextView
                android:id="@+id/title1"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/version"
                android:layout_below="@id/title1"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#bcbcbc"
                android:textSize="10sp" />

    </RelativeLayout>

	<ScrollView
	    android:layout_weight="1.0"
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:scrollbars="none">
        
	<LinearLayout
	    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/introduce"
        android:textSize="15sp" 
        android:layout_marginRight="30dp"
        android:layout_marginLeft="18dip"/>

    <LinearLayout 
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/show_email"
        android:textSize="12sp"
        android:layout_marginLeft="10dip" />

    <TextView
        android:id="@+id/m_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/email"
        android:textSize="12sp" 
        />
</LinearLayout>
<LinearLayout 
	    android:layout_marginTop="2dp"
	  android:layout_marginLeft="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/show_web"
        android:textSize="12sp"
        android:layout_marginLeft="10dip" />

    <TextView
        android:id="@+id/m_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0033ff"
        android:text="@string/web"
        android:textSize="12sp" 
        android:autoLink="web"
       />
</LinearLayout>

<LinearLayout 
	    android:layout_marginTop="2dp"
	   android:layout_marginLeft="10dp"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
   

    <TextView
        android:id="@+id/m_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:textColor="@android:color/black"
        android:text="@string/showblog"
        android:textSize="12sp" 
        android:autoLink="web"
        />
    
    <TextView
        android:id="@+id/blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0033ff"
        android:text="@string/blog"
        android:textSize="12sp" 
        android:autoLink="web"
       />
</LinearLayout>
     </LinearLayout>
     </ScrollView>
</LinearLayout>